# convert-bookmeter

./: LICENSE  README.md  setup.cfg
mypkg/: convert_bookmeter.py
tests/: test_convert_bookmeter.py
