[metadata]
name = convert-bookmeter-qwq00
version = 0.0.2
author = qwq00
author_email = 
license_files = LICENSE
description = 読書メーターに登録した読んだ本を CSV で出力する
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qwq00/convert-bookmeter
project_urls =
    Bug Tracker = https://github.com/qwq00/convert-bookmeter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
  chromedriver-binary
  selenium
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    convert-bookmeter = mypkg.convert_bookmeter:main
